<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/my_menu_label">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/drawer_home"
                    android:icon="@drawable/drawer_icon_home"
                    android:title="@string/home_label"/>
                <item android:id="@+id/drawer_profile"
                    android:icon="@drawable/drawer_icon_profile"
                    android:title="@string/profile_label"/>
                <item android:id="@+id/drawer_myPosts"
                    android:icon="@drawable/drawer_icon_my_posts"
                    android:title="@string/myPosts_label"/>
                <item android:id="@+id/drawer_myContributions"
                    android:icon="@drawable/drawer_icon_contributions"
                    android:title="@string/myContributions_label"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/misc_label">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/drawer_settings"
                    android:icon="@drawable/drawer_icon_settings"
                    android:title="@string/settings_label"/>
                <item android:id="@+id/drawer_faq"
                    android:icon="@drawable/drawer_icon_faq"
                    android:title="@string/faq_label"/>
                <item android:id="@+id/drawer_logout"
                    android:icon="@drawable/drawer_icon_logout"
                    android:title="@string/logout_label"/>
            </group>
        </menu>
    </item>
</menu>