<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/my_tasks_label">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/drawer_home"
                    android:icon="@drawable/drawer_icon_home"
                    android:title="@string/home_label"/>
                <item android:id="@+id/drawer_reports"
                    android:icon="@drawable/drawer_icon_report"
                    android:title="@string/reports_label"/>
                <item android:id="@+id/drawer_verification"
                    android:icon="@drawable/drawer_icon_verification"
                    android:title="@string/verifications_label"/>
                <item android:id="@+id/drawer_suspensions"
                    android:icon="@drawable/drawer_icon_my_posts"
                    android:title="@string/suspensions_label"/>
<!--                <item android:id="@+id/drawer_knowledge"-->
<!--                    android:icon="@drawable/actionbar_icon_search"-->
<!--                    android:title="@string/knowledge_base_label"/>-->
                <item android:id="@+id/drawer_faq"
                    android:icon="@drawable/drawer_icon_faq"
                    android:title="@string/faq_label"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/misc_label">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/drawer_settings"
                    android:icon="@drawable/drawer_icon_settings"
                    android:title="@string/settings_label"/>
                <item android:id="@+id/drawer_logout"
                    android:icon="@drawable/drawer_icon_logout"
                    android:title="@string/logout_label"/>
            </group>
        </menu>
    </item>

</menu>