<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/textfield_style1"
    android:elevation="10dp"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/request_list_label"
        android:textColor="@color/old_green"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/listTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:text="@string/food_name_label"
        android:textColor="@color/dark_sea_green"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/itemName"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_below="@id/title"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@id/listTitle"
        android:background="@drawable/textfield_style1"
        android:text="@string/loading_label"
        android:elevation="5dp"
        android:enabled="false"
        android:inputType="none" />

    <TextView
        android:id="@+id/contactLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemName"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:text="@string/postCont_label"
        android:textColor="@color/dark_sea_green"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/contactDetail"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_below="@id/itemName"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@id/contactLabel"
        android:background="@drawable/textfield_style1"
        android:hint="@string/contact_label"
        android:elevation="5dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactDetail"
        android:layout_marginBottom="5dp"
        android:text="@string/postDesc_label"
        android:textColor="@color/dark_sea_green"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/descET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textfield_style1"
        android:elevation="5dp"
        android:ems="14"
        android:gravity="top"
        android:hint="@string/request_msg_label"
        android:inputType="textMultiLine"
        android:lines="6"
        android:overScrollMode="always"
        android:padding="10dp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="false" />


</RelativeLayout>